--- a/README.org
+++ b/README.org
@@ -1,7 +1,8 @@
+#+OPTIONS: toc:nil
 #+begin_src html
 <!-- This file is generated from README.org -->
 #+end_src
-
+#+TOC: headlines 2
 * 勉強会「広く浅く学ぶ情報リテラシー」
 ** 勉強会の目的
 コンピュータに仕事を任せるために必要な情報を広く浅く提供し，
