:camera_flash: Update

--- a/README.org
+++ b/README.org
@@ -25,19 +25,110 @@
 この生産的なワークフローの極致を「知っておく」だけで，身の回りの業務の改善点が見えるようになります．
 本勉強会で紹介されるさまざまな技術を即座に身につけるための特効薬はありませんが，
 個々の技術間のつながりを一気に学ぶことができれば，のちの独習の効率は飛躍的に向上するはずです．
+* 勉強会の目的と進め方
+** メール
+タイトル: 「広く浅く学ぶ情報リテラシー」
+業務においてコンピュータを適切に使用するための勉強会を開催しようと考えています．
+*** 開催の動機
+以下のような理由から，開催を思いたちました．
+- 業務フローについて，漠然とした不満が聞こえる機会が多い
+- 具体的な解決策について意見交換する機会がない
+- 魚種拡大や資源評価手法の高度化などで，業務が増える見込み
+*** 立ち位置
+我々の業務や研究は，以下のような本質的特性を持っています．
+- 解決すべき問題がある
+- データに対して，何らかの処理をする
+- 再現性が要求される
+- 追跡可能性が要求される
+- コンピュータを使う
+- 複数人で作業する
 
-勉強会は，1回1時間程度，全10回程度を想定しています．
+視野を広げてみれば，これはソフトウェア開発の現場で生じる問題と同一であり，
+近年，ソフトウェア開発者達は，「継続的デリバリー」という手法によって，これらの問題を解決しつつあります．
 
-** 誰のためか
-- コンピュータが嫌いな人
-- 雑用を早く終わらせて脳を休ませたい人
-- 不必要な雑用はそもそもなければいいのにと思う人
-
-** 誰のためでないか
-- 既に継続的デリバリーを導入している人
-- 単純作業を繰り返すのが好きな人
-- ふってきた業務だけこなしていれば満足な人
-- 切れない包丁で料理し続けるのが平気な人
+この勉強会は，我々の業務および研究環境改善のヒントとなる「継続的デリバリー」の概念を紹介し，
+その導入に必要な知識を広く浅く学ぶことを目的としています．
+*** 進め方
+現時点では，別紙のようなアウトラインを想定しているが，
+このまま実施すると，ニーズとの食い違いが生じる恐れがある．
+**** そのため，第1回は方向性を決定するためのブレストとしたい
+***** ブレスト手法
+****** どのような考えがあるかを共有
+****** どんなニーズがあるか
+***** 主催者は，特定の立場に立たずに，議論のとりまとめだけを行うこととする．
+****** 反論しない
+***** アウトラインをたたく
+***** アウトラインは変更になるかもしれない
+***** 興味のある人，特にコンピュータに苦手意識のある方の参加を歓迎します．
+**** スケジュール
+1回1時間程度，全15回程度を想定していますが，
+アウトラインの変更次第では，増減する可能性があります．
+長さや頻度についても話し合いたい
+**** 第一回はいつを予定している
+よろしく
+* CUI に親しむ
+マウスを使わずにコンピュータを操作する利点を理解し，実際にやってみましょう
+- CUI と GUI
+- プレーンテキストとバイナリファイル
+- UNIX コマンド
+- ファイルの本質と拡張子
+* プレーンテキストのちから
+業務環境の基礎をプレーンテキストに置くことで，強力なコマンドの恩恵を受けられるようになります
+- diff
+- grep
+- コラム: エンコードと改行コード
+- 正規表現
+- コラム: DRY 原則
+* コンテナ技術
+環境を正準化するメリットを学び，実際にDockerを使ってみましょう
+- Docker のインストール
+- コンテナ内での作業
+* 文書: 人間のためのテキスト
+プレーンテキスト向けの執筆ツールに触れ，その利点と欠点について意見を交換しましょう
+- エディタ
+- アウトライナー
+- pandoc
+- LaTeX
+* コード: コンピュータと人間のためのテキスト
+プログラミングが業務に占める割合が増えると，どのような問題が生じ得るかについて議論しましょう．
+続いて，それらの問題を解決するためのプログラミングの基礎的な方法論を学びましょう．
+プログラミング言語には，R言語を使用します．
+- スタイル
+  - 命名
+  - コメントは必要か
+  - インデント
+  - リンター
+- データ構造
+- ディレクトリ構造
+- データと2次データ
+- 関数化と高階関数
+- コラム: YAGNI
+- R言語の問題点
+* 開発
+ソフトウェア開発の現場で用いられている手法について概観し，我々が学ぶべき本質について議論しましょう．
+- テスト駆動開発
+- バージョン管理
+- チケット管理システム
+- 継続的インテグレーション
+- コンテナ
+- 継続的デプロイ
+- アジャイル開発とカスケード開発
+* 業務と研究への応用
+我々が業務や研究の現場で課題解決に取り組むとき，満たしているべき要件は何でしょうか．
+それらを具体的に解決する方法はあるでしょうか．
+** 業務
+- Issueベースの課題解決
+- 責任を負うのは誰か
+*** コミュニケーション
+円滑なコミュニケーションはプロジェクト成功の要です．
+飛び交うコミュニケーションを構成している要素について考え，適切なツールについて議論しましょう．
+- メールの問題点
+- 開発者現場で使われるツールとその本質
+** 研究
+- バージョン管理
+- データベースのブラッシュアップ
+- プログラム化とパッケージ化
+- DRY原則に基づく文書作成
 * 現状の業務環境の問題点
 本勉強会に参加してくださった皆様は，多くの業務を抱えていることと思います（私もそうです）．
 メールボックスに押し寄せるタスクに，うんざりしている方もいらっしゃるでしょう．
@@ -83,51 +174,4 @@ Officeが画期的だったのは，すぐに使い始められるところ．
 - 何から学べばいいかわからない
 - 他人が書いたコードがわからない
 - 動くかどうかわからない
-* CUI に親しむ
-** CUI と GUI
-** プレーンテキストとバイナリファイル
-** UNIX コマンド 
-** ファイルの本質と拡張子
-* プレーンテキストのちから
-** エンコードと改行コード
-** diff
-** grep
-** 正規表現
-** コラム: DRY 原則
-* 文書: 人間のためのテキスト
-** エディタ
-** アウトライナー
-** pandoc
-** LaTeX
-* コード: コンピュータと人間のためのテキスト
-** コンパイル言語とインタプリタ言語
-** オブジェクト指向言語と関数型言語
-** リーダブルコード
-*** 命名
-*** コメントの必要性
-*** インデント
-*** リンター
-** データ構造
-** ディレクトリ構造
-** 関数化と高階関数
-** コラム: YAGNI
-* 開発
-** TDD
-** Git と GitHub
-** 継続的インテグレーション
-** コンテナ
-** 継続的デプロイ
-** アジャイル開発とカスケード開発
-** データベースと2次データ
-* 雑用と研究への応用
-** 雑用
-*** WordとExcelのアンインストール
-*** 業務要件の見極めとデータ構造
-** 研究
-*** バージョン管理
-*** データベースのブラッシュアップ
-*** プログラム化とパッケージ化
-*** 本当のデータはどれ？！
-*** DRY原則に基づく文書作成
-*** 文書ビルド環境の正準化
 
