--- a/README.org
+++ b/README.org
@@ -1,53 +1,120 @@
-#+TITLE: 勉強会「広く浅く学ぶ情報リテラシー」
+#+TITLE: 勉強会「広く浅く学ぶ情報リテラシー: 研究業務とソフトウェア開発のアナロジー」
 
-* 勉強会の目的
-コンピュータに仕事を任せるために必要な情報を広く浅く提供し，
-受講者のさらなる学びのための足がかりとすること．
+* 目的
+
+** 大目的
+- 業務環境の効率化
+- 研究活動の活性化
+
+** 本勉強会の目的
+コンピュータを適切に使用するために必要な情報を広く浅く提供し，
+受講者のさらなる学びのための足がかりとすること
+
+* 発案の動機
+- 業務フローについての漠然とした不満が聞こえてくる中，具体的な解決策について議論する場がないから
+- 資源評価の手法高度化や対象魚種拡大等の要求により，将来的に業務負担の増加が想定されるから
+- 膨大なデータ資産が未活用のまま眠っているから
+
+* 実施内容
+- 「継続的デリバリー」の概念紹介
+- 重要な技術的要素の紹介と演習
+- 問題を収集し，その本質を見極めるための討論
+
+* 提示する考え方
+- 我々の業務および研究活動の本質は，ソフトウェア開発と同一である
+- 我々が抱える問題は，既にソフトウェア開発の現場では解決されつつある
+- 我々の業務および研究環境は，ソフトウェア開発を手本として改善可能である
+ 
+* アウトライン
+アウトライン
+
 * はじめに
-私たちの日々の業務において，コンピュータは不可欠なものです．
+この勉強会では，
+
+
+
+
+
+日々の業務および研究の現場で生じる問題を解決する「継続的デリバリー」の概念を理解し，
+その構成要素となる個々の技術的知識についても，演習を通じて広く浅く学びます．
+
+** 現状の問題点
+私たちが日々従事する委託業務および学術研究（以下，研究業務）において，コンピュータは不可欠な存在です．
 本来，コンピュータは我々の仕事を助けてくれるはずのものですが，
 その使い方を誤ると，我々は逆にコンピュータに「使われ」，不必要な作業に苦しめられることになります．
-特に，プロジェクトがトップダウン型の業務隊形をとっている場合，
-不適切な業務命令はプロジェクトの生産性を大きく損ないます．
 コンピュータを使った業務，とくに協同作業は，もはや手作業による帳簿作業の延長ではないのです．
 
-コンピュータを使った協同作業に長けているのはソフトウェア開発者たちです．
-彼らは20年以上前から生産的な協同作業に最適な手法を模索しつづけており，
-その手法は近年，「継続的デリバリー」という形で収束しつつあります．
-継続的デリバリーの考え方は，コンピュータでの協同作業を必要とする全ての人が学ぶべき概念ですが，
-我々研究者を含め，外部のコミュニティには，ほとんど認知されていないように思います．
-この勉強会では，円滑なチームワークを実現するための手法「継続的デリバリー」を学ぶことによって，
-コンピュータと我々がどのように業務を分担すべきかを見極める眼を養います．
-また，コンピュータに「使われる」働き方から，コンピュータを「使い倒す」働き方へシフトするために必要な情報も，
-広く浅く提供します．
+コンピュータの使い方を誤った業務の典型が，現状の資源評価業務です．
+現状の諸問題は相互に関係しているため明確な分類は困難ですが，概ね以下の3点に集約されます．
 
-たとえ継続的デリバリーそのものを取り入れることが難しかったとしても，
-この生産的なワークフローの極致を「知っておく」だけで，身の回りの業務の改善点が見えるようになります．
-本勉強会で紹介されるさまざまな技術を即座に身につけるための特効薬はありませんが，
-個々の技術間のつながりを一気に学ぶことができれば，のちの独習の効率は飛躍的に向上するはずです．
-* 勉強会の目的と進め方
-** メール
-タイトル: 「広く浅く学ぶ情報リテラシー」
-業務においてコンピュータを適切に使用するための勉強会を開催しようと考えています．
-*** 開催の動機
-以下のような理由から，開催を思いたちました．
-- 業務フローについて，漠然とした不満が聞こえる機会が多い
-- 具体的な解決策について意見交換する機会がない
-- 魚種拡大や資源評価手法の高度化などで，業務が増える見込み
-*** 立ち位置
-我々の業務や研究は，以下のような本質的特性を持っています．
+- バイナリファイルへの重度依存
+- バージョン管理システムの不在
+- 不適切な業務設計
+
+これら3つの問題は，それぞれ以下のような副次的問題を引き起こし，結果的に業務全体の脆弱性につながっています．
+- バイナリファイルへの重度依存
+  - 手作業の介在
+  - 減らない人的ミス
+  - 属人化した作業
+  - 要求変化への対応の遅れ
+- バージョン管理システムの不在
+  - 類似ファイルの氾濫
+  - 追跡不能な作業
+  - 担当者間での重複したタスク
+- 不適切な業務設計
+  - データベースの欠如
+  - 中間ファイルへの依存と手戻り発生リスク
+
+これらの問題は，
+
+
+
+
+
+業務担当者を精神的に消耗させ，彼ら
+
+
+
+
+が抱える他の業務や研究活動にも悪影響を及ぼします．
+今後，資源評価の手法高度化や対象魚種拡大が始まることを考えれば，業務体制の合理化が急務です．
+果たして，解決策はあるのでしょうか．
+
+** 本勉強会の目的
+その具体的な解決策を提示するのが，本勉強会の目的の一つです．
+しかし，その解決策を真に理解するには，問題をこれまで見てきたよりも一歩引いた視点から捉える必要があります．
+私たちの研究業務は，以下のような本質的特性を持っています．
 - 解決すべき問題がある
 - データに対して，何らかの処理をする
 - 再現性が要求される
 - 追跡可能性が要求される
-- コンピュータを使う
-- 複数人で作業する
 
-視野を広げてみれば，これはソフトウェア開発の現場で生じる問題と同一であり，
-近年，ソフトウェア開発者達は，「継続的デリバリー」という手法によって，これらの問題を解決しつつあります．
+こういった特性を持つ作業を，私たちはコンピュータを使って，複数人で共同で行うのです．
 
-この勉強会は，我々の業務および研究環境改善のヒントとなる「継続的デリバリー」の概念を紹介し，
-その導入に必要な知識を広く浅く学ぶことを目的としています．
+コンピュータを使った協同作業に長けているのはソフトウェア開発者たちです．
+視野を広げてみれば，研究業務とソフトウェア開発は本質的にまったく同一であるため，
+私たちは，研究業務の効率化のヒントを彼らの仕事ぶりに求めることができます．
+ソフトウェア開発者たちは20年以上前から，生産的な協同作業に最適な手法についての思考錯誤を繰り返しており，
+その手法は近年，「継続的デリバリー」という形で収束しつつあります．
+
+
+継続的デリバリーは，コンピュータでの協同作業に従事する全ての人が学ぶべき概念ですが，
+私たち研究者を含めた外部のコミュニティには，ほとんど認知されていないように思います．
+この勉強会では，円滑なチームワークを実現するための手法「継続的デリバリー」を学ぶことによって，
+コンピュータと我々がどのように業務を分担すべきかを見極める眼を養います．
+継続的デリバリーを構成する個々の要素は組み合わせてこそ真価を発揮しますが，個別に導入した場合にも，少しずつ効果を発揮します．
+それこそが，コンピュータに「使われる」働き方から，コンピュータを「使い倒す」働き方へシフトするための小さなステップです．
+本勉強会では，これらの技術についても広く浅く解説し，演習を通じて実際に体験することができます．
+
+たとえ継続的デリバリーそのものを取り入れることが難しかったとしても，
+この生産的なワークフローの極致を「知っておく」だけで，身の回りの業務の改善点が見えるようになります．
+本勉強会で紹介されるさまざまな技術を即座に身につけるための特効薬はありませんが，
+個々の技術間の有機的つながりを一気に学ぶことができれば，のちの独習の効率は飛躍的に向上するはずです．
+
+* 勉強会の目的と進め方
+** メール
+コンピュータの適切な使用方法を学ぶための勉強会を開催しようと考えています．
+
 *** 進め方
 現時点では，別紙のようなアウトラインを想定しているが，
 このまま実施すると，ニーズとの食い違いが生じる恐れがある．
@@ -174,4 +241,3 @@ Officeが画期的だったのは，すぐに使い始められるところ．
 - 何から学べばいいかわからない
 - 他人が書いたコードがわからない
 - 動くかどうかわからない
-
