--- a/README.org
+++ b/README.org
@@ -1,28 +1,28 @@
-#+TITLE: 勉強会「広く浅く学ぶ情報リテラシー: 研究業務とソフトウェア開発のアナロジー」
-* 目的
+#+TITLE: 勉強会「広く浅く学ぶ情報リテラシー: 研究業務とソフトウェア開発のアナロジーから」
+** 目的
 
-** 大目的
+*** 大目的
 - 業務環境の効率化
 - 研究活動の活性化
 
-** 本勉強会の目的
+*** 本勉強会の目的
 コンピュータを適切に使用するために必要な情報を広く浅く提供し，
 受講者のさらなる学びのための足がかりとすること
 
-* 発案の動機
+** 発案の動機
 - 業務フローについての漠然とした不満が聞こえてくる中，具体的な解決策について議論する場がないから
 - 資源評価の手法高度化や対象魚種拡大等の要求により，将来的に業務負担の増加が想定されるから
 - 膨大なデータ資産が未活用のまま眠っているから
 
-* 実施内容
+** 実施内容
 - 「継続的デリバリー」の概念紹介
 - 重要な技術的要素の紹介と演習
 - 問題を収集し，その本質を見極めるための討論
 
-* 提示する考え方
+** 提示する考え方
 - 我々の業務および研究活動の本質は，ソフトウェア開発と同一である
 - 我々が抱える問題は，既にソフトウェア開発の現場では解決されつつある
 - 我々の業務および研究環境は，ソフトウェア開発を手本として改善可能である
  
-* アウトライン
+** アウトライン
 https://github.com/kikirinrin/shell2cd/outline.org
