--- a/mail.org
+++ b/mail.org
@@ -12,36 +12,46 @@
 コンピュータを適切に使用するために必要な情報を広く浅く提供し，
 受講者のさらなる学びのための足がかりとすること
 
+** 想定する参加者
+- コンピュータの操作に漠然とした不安を覚える初級者
+- 次にどのコンピュータ技術を学ぶべきか見極めたい中級者
+- 議論活性化に貢献する意思のある上級者
+
 ** 発案の動機
 - 業務フローについての漠然とした不満が聞こえる中，具体的な解決策について議論する場がないため
 - 資源評価の手法高度化や対象魚種拡大等の要求により，将来的に業務負担の増加が想定されるため
 - 膨大なデータ資産が未活用のまま眠っているため
 
 ** 実施内容
+- 我々が現在抱えている問題を収集し，その本質を見極めるための討論
 - 「継続的デリバリー」の概念紹介
 - 重要な技術的要素の紹介と演習
-- 問題を収集し，その本質を見極めるための討論
 
 ** 提示する考え方
 - 我々の業務および研究活動の本質は，ソフトウェア開発と同一である
 - 我々が抱える問題は，既にソフトウェア開発の現場では解決されつつある
 - 我々の業務および研究環境は，ソフトウェア開発手法を手本とすることで改善可能である
 
-* 進め方
-各回1時間，全15回程度を想定しています．
+** 期待される効果
+- コンピュータを使った仕事のあるべき姿を正しく認識できるようになる
+- 新ワークフローの設計方針について意思統一がなされる
+- 自主学習すべき項目の優先度を設定できるようになる
 
-勉強会の[[https://kikirinrin.github.io/shell2cd/outline.html][アウトライン]]は用意してありますが，
+* 進め方
+全10回程度を想定しています．
+
+勉強会のアウトライン（https://kikirinrin.github.io/shell2cd/outline.html ）は用意してありますが，
 参加者の方々との議論を通して，主催者自身が学びながら進めてゆきたいと考えております．
 
 第1回 顔合わせ
 日時: ○月✗日 14:00-15:00
 場所: 
 
-意義のある勉強会にするために，第1回は，現状に対する認識の共有とニーズ収集を兼ねたブレインストーミングの時間とします．
+意義のある勉強会にするために，第1回は，現状に対する認識の共有とニーズ収集を兼ねたブレインストーミングの回とします．
 主催者は，発案者の立場を離れて進行役に専念しますので，ぜひ奇譚のないご意見をいただきたく思います．
 
 ブレインストーミングの結果，勉強会のアウトラインおよび全体のボリュームは変更される可能性があります．
 
 皆様のご参加をお待ちしております．
 
-
+長文失礼致しました．
