--- a/outline.org
+++ b/outline.org
@@ -1,3 +1,35 @@
+* 継続的デリバリーとは
+ソフトウェアを安定的に開発運用するための方法です．
+
+大まかにいうと，以下のような流れからなっています．
+- チケットの要求に従い，コードなどの構成要素を更新する
+- それをトリガーとして，自動テストが走る
+- テストが成功すると，ソフトウェアが組み立てられる
+- ソフトウェアがリリース用サーバにアップロードされる
+- 人間が「リリース」ボタンを押すことで，ユーザーが利用可能になる
+
+要は，
+仕様のチェックや部品の組み立て，ファイルのアップロードなどの煩雑な手続きをコンピュータに任せることで，
+人間が頭脳労働に集中するための手法です．
+
+ソフトウェア開発の用語を，我々研究者の用語に置き換えると，以下のようになります
+- ソフトウェア: 報告書やプレゼンテーションファイル
+- ユーザー: 業務委託元や国民
+- チケット: 委託元からの課題，仕様変更，発覚したミス，改善案
+- データ: 生物データ，物理データ，写真，手書きの図，文献リスト
+- コード: 計算の手順，図表の作成手順，報告書の文章，図表の貼り付け位置
+- テスト: データの仕様チェック，計算結果のチェック，誤字脱字チェック
+- リリース: 報告書の公開
+
+このセッションでは，質疑応答の時間を十分に確保し，
+初級者から上級者まで，参加者全員が継続的デリバリーの概念を確実に理解することを目標とします．
+
+キーワード
+- バージョン管理
+- チケット管理
+- documentation as code
+- infrasturucture as code
+
 * CUI に親しむ
 マウスを使わずにコンピュータを操作する利点を理解し，実際にやってみましょう
 - CUI と GUI
