--- a/mail.org
+++ b/mail.org
@@ -40,17 +40,18 @@
 * 進め方
 全10回程度を想定しています．
 
-勉強会のアウトライン（https://kikirinrin.github.io/shell2cd/outline.html ）は用意してありますが，
+勉強会のアウトライン（https://kikirinrin.github.io/shell2cd/outline.html） は用意してありますが，
 参加者の方々との議論を通して，主催者自身が学びながら進めてゆきたいと考えております．
 
-第1回 顔合わせ
-日時: ○月✗日 14:00-15:00
-場所: 
+第1回は，継続的デリバリーの概念紹介です．
+できるだけ多くの方にご参加いただきたいので，
+ご参加くださる方は，調整さん（https://chouseisan.com/s?h=3acb8781361946b9a46a9b64e85063e2） に，ご都合のよい日程をご入力下さい．
+入力締め切りは8月26日（月）12:00とさせていただきます．
+参加人数に応じて会場を決定し，日程をご入力くださった方にお知らせいたします．
 
-意義のある勉強会にするために，第1回は，現状に対する認識の共有とニーズ収集を兼ねたブレインストーミングの回とします．
-主催者は，発案者の立場を離れて進行役に専念しますので，ぜひ奇譚のないご意見をいただきたく思います．
-
-ブレインストーミングの結果，勉強会のアウトラインおよび全体のボリュームは変更される可能性があります．
+勉強回全体が意義深いものとなるよう，第1回では現状に対する認識の共有とニーズ収集を兼ねた議論も行います．
+議論の結果，勉強会のアウトラインおよび全体のボリュームは変更される可能性があります．
+主催者は，発案者の立場を離れて議論の進行役に専念しますので，ぜひ奇譚のないご意見をいただきたく思います．
 
 皆様のご参加をお待ちしております．
 
