--- a/mail.org
+++ b/mail.org
@@ -1,11 +1,11 @@
 資源研究センターの皆様
 
 資源評価グループの林です．
-コンピュータの適切な使用方法を学ぶための勉強会を計画しています． 
+業務および研究環境の適切な設計と関連技術について学ぶための勉強会を計画しています．
 
- - コンピュータの操作に漠然とした不安を覚える初級者
- - 次にどのコンピュータ技術を学ぶべきか見極めたい中級者
-を対象としていますが， 議論に参加し，勉強会内容をブラッシュアップして下さる上級者の方の参加も大歓迎です
+- 「バージョン管理」や「自動テスト」などの用語に馴染みのない初級者
+- 複数人でのデータ整理や文書作成のベストプラクティスについて議論したい中級者
+を対象としていますが， 議論に参加し，勉強会の内容を改善して下さる上級者の参加も大歓迎です．
 
 関心を持ってくださった方は，調整さん（https://chouseisan.com/s?h=3acb8781361946b9a46a9b64e85063e2） に，ご都合のよい日程をご入力下さい．
 入力締め切りは8月26日（月）12:00とさせていただきます．会場は参加人数に応じて決定し，日程をご入力くださった方にお知らせいたします． 
@@ -37,10 +37,9 @@
 - 我々の業務および研究環境は，ソフトウェア開発手法を手本とすることで改善可能である
 
 期待される効果
-- コンピュータを使った仕事のあるべき姿を正しく認識できるようになる
+- 業務および研究におけるファイル運用のあるべき姿を正しく認識できるようになる
 - 新ワークフローの設計方針について意思統一がなされる
 - 自主学習すべき項目の優先度を設定できるようになる
-
 
 * 進め方
 全10回程度を想定しています．
