--- a/mail.org
+++ b/mail.org
@@ -3,12 +3,13 @@
 資源評価グループの林です．
 業務および研究環境の適切な設計と関連技術について学ぶための勉強会を計画しています．
 
+以下ような方々を対象としています．
 - 「バージョン管理」や「自動テスト」などの用語に馴染みのない初級者
 - 複数人でのデータ整理や文書作成のベストプラクティスについて議論したい中級者
-を対象としていますが， 議論に参加し，勉強会の内容を改善して下さる上級者の参加も大歓迎です．
+これらに該当する方々以外にも， 議論に参加し，勉強会の内容を改善して下さる上級者の参加も大歓迎です．
 
 関心を持ってくださった方は，調整さん（https://chouseisan.com/s?h=3acb8781361946b9a46a9b64e85063e2） に，ご都合のよい日程をご入力下さい．
-入力締め切りは8月26日（月）12:00とさせていただきます．会場は参加人数に応じて決定し，日程をご入力くださった方にお知らせいたします． 
+入力締め切りは8月27（火）12:00とさせていただきます．会場は参加人数に応じて決定し，日程をご入力くださった方にお知らせいたします． 
 
 概要と進め方については，以下をご覧下さい（Webページにも情報があります https://kikirinrin.github.io/shell2cd/ ）．
 
