Follow to user name change

--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+TITLE: 勉強会「広く浅く学ぶ情報リテラシー: 研究業務とソフトウェア開発のアナロジーから」
-GitHub Pages: https://kikirinrin.github.io/shell2cd/
+GitHub Pages: https://akikirinrin.github.io/shell2cd/
 ** 目的
 
 *** 大目的
