--- a/README.org
+++ b/README.org
@@ -8,7 +8,7 @@ GitHub Pages: https://akikirinrin.github.io/shell2cd/
 
 *** 本勉強会の目的
 コンピュータを適切に使用するために必要な情報を広く浅く提供し，
-受講者のさらなる学びのための足がかりとすること
+参加者のさらなる学びのための足がかりとすること
 
 ** 発案の動機
 - 業務フローについての漠然とした不満が聞こえてくる中，具体的な解決策について議論する場がないから
