testing md grammer

--- a/PITCHME.org
+++ b/PITCHME.org
@@ -1,12 +1,6 @@
 * 継続的デリバリー
 
-** 今日やること
-- 継続的デリバリーの概念紹介
-- 議論と現状の問題点共有
-- 勉強会アウトライン & タイトル確定
-- 連絡 & ファイル共有インフラ決定
-
-** 継続的デリバリーを学べ
+** 継続的デリバリーの概念紹介
 - S: 木こりの話．我々は，資源評価の他，研究もしたい．
 - C:
   - ステークホルダーの納得のためには，きめ細やかな計算が必要
@@ -58,3 +52,9 @@
 ***** 学習文化
 
 ***** 正のサイクル
+
+** 議論
+
+** 勉強会のアウトライン確定
+
+** インフラ決定
