--- a/PITCHME.org
+++ b/PITCHME.org
@@ -1,60 +1,221 @@
-* 継続的デリバリー
+* DevOps
 
-** 継続的デリバリーの概念紹介
-- S: 木こりの話．我々は，資源評価の他，研究もしたい．
-- C:
-  - ステークホルダーの納得のためには，きめ細やかな計算が必要
-  - 提示・議論・再計算のサイクルを重ねる必要がある
-  - ワークフローのコストが大きすぎる
-  - 担当者間で作業が重複している
-  - 魚種拡大により，さらなる負担増が見込まれる
-  - 研究もしたい
-  - データ資産が活用されていない
-  - そもそも，空白の時間が必要
-    - 要求を断るのではなく，すばやく完了させることによって
-- Q: 我々はどうするべきか？
-継続的デリバリーを学べ
----
-*** 我々はもう開発しているから
-
-**** 私たちの何割が開発者なのか
-
-**** 名前の定義
-
-**** バージョン管理をしていないというのはどれぐらいヤバいのか
-
-**** 直訳ではだめ
-
-***** カーボン紙の例
-
-*** 我々は縛りプレイをしているから
-
-**** DevOpsは自動運転ではない，レシピだ
-楽をしたいわけではない（したいけど）
-
-***** ぼくはランニングが好きだ
-エクセル作業に趣はありますか
-***** 自動化は確かに重要な構成要素だけど
-**** いいプロジェクトとは
-
-***** 着任初日から働き始められる
-
-***** 
-*** 現実的に機能しているから
-**** ファイトスの円盤の悲劇を繰り返さないために
-
-**** アーリーペインを受け入れろ
-
+** DevOpsの概念紹介
+*** DevOpsを学ぼう
+**** 頑張る木こり
+**** 資源評価と研究の要求は多い
 **** 損益分岐点はとっくに過ぎている
+***** アーリーペインを受け入れろ
+**** ステークホルダーの納得のためには，多大なコストが必要
+***** きめ細やかな計算シナリオ
+***** 提示・議論・再計算のサイクルを重ねる必要がある
+**** 既にワークフローのコストが大きすぎる
+***** 担当者間で作業が重複している
+**** 魚種拡大により，さらなる負担増が見込まれる
+**** 研究もしたい
+***** データ資産が活用されていない
+**** 我々はどうするべきか？
+**** 解決のカギがDevOps
+**** DevOpsとは
+ソフトウェア開発のベストプラクティス
+**** DevOpsのある現場
+***** ルーティン作業
+****** 手作業
+******* 構成要素を改変
+******** データ
+******** コード
+******** 文章
+******* 登録
+****** 自動
+******* 文書生成
+******** テスト
+******** コンパイル
+******* アップロード
+****** 手作業
+******* 公開承認
+***** 要求発生時
+****** 手作業
+******* テスト追加
+******* 修正
+******* 登録
+****** 自動
+******* 文書生成
+******* アップロード
+****** 手作業
+******* 公開承認
+---
+**** DevOpsを学ぶ理由
+- 我々はもう「開発」しているから
+- 横着ではなくレシピだから
+- 敗の歴史をなぞりつつあるから
+- 副次効果があるから
+*** 我々はもう「開発」している
+**** 導入
+***** 開発者の自覚がある人？
+***** プログラムを書く人？
+***** 名前の定義
+***** 私たちはプログラマより「開発」していることもある
+***** もう「開発」しているんです
+**** 仕事の要件がソフトウェアと同じだから
+***** 解決すべき問題があるから
+***** データに対して何らかの処理をするから
+***** 処理には再現性が求められるから
+***** 再現性が求められるから
+**** ワーキングスタイルが開発者と同じだから
+***** コンピュータを使うから
+***** 複数人で作業するから
+**** プロジェクト構成要素がソフトウェアと同じだから
+***** 顧客: 水産庁，漁業者
+***** 製品: 資源評価
+****** データ: データ
+****** コード: 計算プログラム，作図プログラム，文章
+****** テスト: データの仕様，想定される計算結果，誤字脱字
+****** ドキュメント: 報告書，プレゼンテーションファイル
+***** Issue
+****** 顧客からの要求
+****** プログラムのバグ
+****** 誤字脱字
+**** だからベストプラクティス: DevOpsを学びなさい
 
-**** 副次効果
+*** 横着ではなくレシピ
+**** 自動化と聞いて眉を顰める風潮を感じる
+**** 自動化はただの構成要素
+**** なぜそう言える？
+**** 正しいから
+横着: 不正な方法
 
-***** 学習文化
+**** 無駄がないから
 
-***** 正のサイクル
+**** 過程を楽しむべき仕事ではないから
 
+**** 働き方を変えるから
+***** あなたは奴隷
+***** 仕事の遅い奴隷
+***** コンピュータの足を引っ張るな
+***** 使い倒せ
+*** 失敗の歴史をなぞりつつある
+
+**** 開発と運用に差が生まれつつある
+***** 運用の割合が多すぎるから
+***** 開発者文化が入ってこないから
+R言語ユーザーは統計学者
+***** コンピュータへの翻訳はコツがいるから
+****** 直訳ではだめ
+****** カーボン紙の例
+***** 勉強の習慣がないから
+バージョン管理をしていないというのはどれぐらいヤバいのか
+
+*** 副次効果があるから
+**** ファイトスの円盤
+**** 引き継がれなかったら意味がない
+**** プロジェクトの透明性
+着任初日から働き始められる
+**** 学習文化
+正のサイクル
+**** ゆとり
 ** 議論
+@ul
+
+- Plain text list item
+- Rich **markdown** list *item*
+- Link [within](https://gitpitch.com) list item
+
+@ulend
 
 ** 勉強会のアウトライン確定
+*** DevOpsとは
+*** CUI に親しむ
+
+マウスを使わずにコンピュータを操作する利点を理解し，実際にやってみましょう
+
+-   CUI と GUI
+-   プレーンテキストとバイナリファイル
+-   UNIX コマンド
+-   ファイルの本質と拡張子
+
+*** プレーンテキストのちから
+
+業務環境の基礎をプレーンテキストに置くことで，強力なコマンドの恩恵を受けられるようになります
+
+-   diff
+-   grep
+-   コラム: エンコードと改行コード
+-   正規表現
+-   コラム: DRY 原則
+
+*** コンテナ技術
+
+環境を正準化するメリットを学び，実際にDockerを使ってみましょう
+
+-   Docker のインストール
+-   コンテナ内での作業
+
+*** 文書: 人間のためのテキスト
+
+プレーンテキスト向けの執筆ツールに触れ，その利点と欠点について意見を交換しましょう
+
+-   エディタ
+-   アウトライナー
+-   pandoc
+-   LaTeX
+
+*** コード: コンピュータと人間のためのテキスト
+
+プログラミングが業務に占める割合が増えると，どのような問題が生じ得るかについて議論しましょう．
+続いて，それらの問題を解決するためのプログラミングの基礎的な方法論を学びましょう．
+プログラミング言語には，R言語を使用します．
+
+- スタイル
+    - 命名
+    - コメントは必要か
+    - インデント
+    - リンター
+- データ構造
+- ディレクトリ構造
+- データと2次データ
+- 関数化と高階関数
+- コラム: YAGNI
+- R言語の問題点
+
+*** 開発
+
+ソフトウェア開発の現場で用いられている手法について概観し，我々が学ぶべき本質について議論しましょう．
+
+- テスト駆動開発
+- バージョン管理
+- チケット管理システム
+- 継続的インテグレーション
+- コンテナ
+- 継続的デプロイ
+- アジャイル開発とカスケード開発
+
+*** 業務と研究への応用
+
+我々が業務や研究の現場で課題解決に取り組むとき，満たしているべき要件は何でしょうか．
+それらを具体的に解決する方法はあるでしょうか．
+
+
+**** 業務
+
+-   Issueベースの課題解決
+-   責任を負うのは誰か
+
+
+***** コミュニケーション
+
+円滑なコミュニケーションはプロジェクト成功の要です．
+飛び交うコミュニケーションを構成している要素について考え，適切なツールについて議論しましょう．
+
+-   メールの問題点
+-   開発者現場で使われるツールとその本質
+
+**** 研究
+
+- バージョン管理
+- データベースのブラッシュアップ
+- プログラム化とパッケージ化
+- DRY原則に基づく文書作成
 
 ** インフラ決定
+- Slack
+- Microsoft Teams
