--- a/01.org
+++ b/01.org
@@ -1,128 +1,182 @@
-* DevOps
+#+TITLE: 第1回
+#+Author: Akira Hayashi
 
-** DevOpsの概念紹介
-*** DevOpsを学ぼう
-**** 頑張る木こり
-**** 資源評価と研究の要求は多い
-**** 損益分岐点はとっくに過ぎている
-***** アーリーペインを受け入れろ
-**** ステークホルダーの納得のためには，多大なコストが必要
-***** きめ細やかな計算シナリオ
-***** 提示・議論・再計算のサイクルを重ねる必要がある
-**** 既にワークフローのコストが大きすぎる
-***** 担当者間で作業が重複している
-**** 魚種拡大により，さらなる負担増が見込まれる
-**** 研究もしたい
-***** データ資産が活用されていない
-**** 我々はどうするべきか？
-**** 解決のカギがDevOps
-**** DevOpsとは
+#+REVEAL_ROOT: https://revealjs.com/
+#+REVEAL_HLEVEL: 2
+#+REVEAL_THEME: sky
+#+REVEAL_TRANS: slide
+
+#+OPTIONS: num:nil toc:1
+
+* DevOpsを学ぶ理由
+*** 頑張る木こり
+*** 資源評価への要求: ますます高く
+**** 資源評価プロジェクトの「成功」とは？
+***** 合理的管理
+***** ステークホルダーの相互理解
+*** なにが必要？
+**** きめ細やかな計算シナリオ
+**** 徹底的な議論
+**** 要求への素早い対応
+*** できますか？
+*無理です*
+**** 理由
+計算・提示・議論 のサイクルを増やすには
+
+ワークフローのコストが大きすぎる
+*** では，やらないのですか？
+それは許されない
+*** 悪いニュース
+**** さらなる負担増
+魚種拡大 +（正気ですか？）+
+*** 研究もしたい
+**** データ資産が活用されていない
+*** つまり
+「木こり」を笑っている場合ではない
+
+そろそろ刃を研がないといけない
+
+損益分岐点はとっくに過ぎている
+*** どうするべきか？
+*** 解決のカギ: DevOps
+*** DevOpsって？
 ソフトウェア開発のベストプラクティス
-**** DevOpsのある現場
-***** ルーティン作業
-****** 手作業
-******* 構成要素を改変
-******** データ
-******** コード
-******** 文章
-******* 登録
-****** 自動
-******* 文書生成
-******** テスト
-******** コンパイル
-******* アップロード
-****** 手作業
-******* 公開承認
-***** 要求発生時
-****** 手作業
-******* テスト追加
-******* 修正
-******* 登録
-****** 自動
-******* 文書生成
-******* アップロード
-****** 手作業
-******* 公開承認
----
-**** DevOpsを学ぶ理由
+*** 大まかな流れ
+- 問題を定義する
+- 問題を解決する
+- 自動品質チェック
+- 自動で製品が組み上がる
+*** DevOpsを学ぶ理由
 - 我々はもう「開発」しているから
 - 横着ではなくレシピだから
-- 敗の歴史をなぞりつつあるから
-- 副次効果があるから
-*** 我々はもう「開発」している
-**** 導入
-***** 開発者の自覚がある人？
-***** プログラムを書く人？
-***** 名前の定義
-***** 私たちはプログラマより「開発」していることもある
-***** もう「開発」しているんです
-**** 仕事の要件がソフトウェアと同じだから
-***** 解決すべき問題があるから
-***** データに対して何らかの処理をするから
-***** 処理には再現性が求められるから
-***** 再現性が求められるから
-**** ワーキングスタイルが開発者と同じだから
-***** コンピュータを使うから
-***** 複数人で作業するから
-**** プロジェクト構成要素がソフトウェアと同じだから
-***** 顧客: 水産庁，漁業者
-***** 製品: 資源評価
-****** データ: データ
-****** コード: 計算プログラム，作図プログラム，文章
-****** テスト: データの仕様，想定される計算結果，誤字脱字
-****** ドキュメント: 報告書，プレゼンテーションファイル
-***** Issue
-****** 顧客からの要求
-****** プログラムのバグ
-****** 誤字脱字
-**** だからベストプラクティス: DevOpsを学びなさい
+- 失敗の轍をなぞりつつあるから
+- よい副次的効果があるから
+** 我々はもう「開発」している
+*** あなたは「開発」していますか？
+*** あなたはプログラムを書きますか？
+*** 名前の定義
+*** 私たちはプログラマより「開発」していることもある
+*** もう「開発」しているんです
+*** 仕事の要件がソフトウェアと同じだから
+**** 解決すべき問題があるから
+**** データに対して何らかの処理をするから
+**** 処理には再現性が求められるから
+**** 再現性が求められるから
+*** ワーキングスタイルが開発者と同じだから
+**** コンピュータを使うから
+**** 複数人で作業するから
+*** プロジェクト構成要素がソフトウェアと同じだから
+**** 顧客: 水産庁，漁業者
+**** 製品: 資源評価
+***** データ: データ
+***** コード: 計算プログラム，作図プログラム，文章
+***** テスト: データの仕様，想定される計算結果，誤字脱字
+***** ドキュメント: 報告書，プレゼンテーションファイル
+**** Issue
+***** 顧客からの要求
+***** プログラムのバグ
+***** 誤字脱字
+*** だからベストプラクティス: DevOpsを学びなさい
 
-*** 横着ではなくレシピ
-**** 自動化と聞いて眉を顰める風潮を感じる
-**** 自動化はただの構成要素
-**** なぜそう言える？
-**** 正しいから
+** 横着ではなくレシピ
+*** 自動化と聞いて眉を顰める風潮を感じる
+*** 自動化はただの構成要素
+*** なぜそう言える？
+*** 正しいから
 横着: 不正な方法
 
-**** 無駄がないから
+*** 無駄がないから
 
-**** 過程を楽しむべき仕事ではないから
+*** 過程を楽しむべき仕事ではないから
+仕事は旅行ではない
+*** 働き方を変えるから
+**** あなたは奴隷
+**** 仕事の遅い奴隷
+**** コンピュータの足を引っ張るな
+**** 使い倒せ
+** 失敗の轍をなぞりつつある
 
-**** 働き方を変えるから
-***** あなたは奴隷
-***** 仕事の遅い奴隷
-***** コンピュータの足を引っ張るな
-***** 使い倒せ
-*** 失敗の歴史をなぞりつつある
-
-**** 開発と運用に差が生まれつつある
-***** 運用の割合が多すぎるから
-***** 開発者文化が入ってこないから
+*** 開発と運用に差が生まれつつある
+**** 運用の割合が多すぎるから
+**** 開発者文化が入ってこないから
 R言語ユーザーは統計学者
-***** コンピュータへの翻訳はコツがいるから
-****** 直訳ではだめ
-****** カーボン紙の例
-***** 勉強の習慣がないから
+**** コンピュータへの翻訳はコツがいるから
+***** 直訳ではだめ
+***** カーボン紙の例
+**** 勉強の習慣がないから
 バージョン管理をしていないというのはどれぐらいヤバいのか
-
-*** 副次効果があるから
-**** ファイトスの円盤
-**** 引き継がれなかったら意味がない
-**** プロジェクトの透明性
+*** ファイトスの円盤
+*** 引き継がれなかったら意味がない
+** よい副次的効果があるから
+*** プロジェクトの透明性
 着任初日から働き始められる
-**** 学習文化
+*** 学習文化
 正のサイクル
-**** ゆとり
-** 議論
-@ul
+*** ゆとり
 
-- Plain text list item
-- Rich **markdown** list *item*
-- Link [within](https://gitpitch.com) list item
+* DevOps
 
-@ulend
+** 構成要素
+*** バージョン管理システム
 
-** 勉強会のアウトライン確定
+*** チケット管理システム
+
+*** 自動テスト
+
+*** 自動ビルド
+
+*** コミュニケーションツール
+
+**** チャット
+**** bot
+
+** クッキーに例えると
+*** 手で成形
+
+*** 裏で手で成形
+
+*** カスタマーセンターに登録
+
+
+** 我々の仕事はどう変わるか
+
+*** 特定の問題について，チャットツールで議論
+
+*** 要求が決定したらIssue登録
+
+*** 責任者を決定
+
+*** ブランチを切る
+
+*** テストを書く
+
+*** コード編集 or 執筆
+
+*** ローカルビルド
+
+*** コミット，push，PR
+
+*** レビュー
+
+*** 修正
+
+*** 再ビルド
+
+*** 再レビュー
+
+*** マージ
+
+*** リモートビルド
+
+*** デリバリー
+
+*** デプロイ
+
+* 議論
+
+* 勉強会のアウトライン確定
+
+** アウトライン
 *** DevOpsとは
 *** CUI に親しむ
 
@@ -216,6 +270,6 @@ R言語ユーザーは統計学者
 - プログラム化とパッケージ化
 - DRY原則に基づく文書作成
 
-** インフラ決定
+* インフラ決定
 - Slack
 - Microsoft Teams
