--- a/01/presentation.org
+++ b/01/presentation.org
@@ -1,17 +1,63 @@
 #+TITLE: 第1回
+#+SUBTITLE: DevOpsの紹介と議論
 #+Author: Akira Hayashi
 
 #+REVEAL_ROOT: https://revealjs.com/
 #+REVEAL_HLEVEL: 2
 #+REVEAL_THEME: sky
 #+REVEAL_TRANS: slide
+#+REVEAL_TITLE_SLIDE: <h2>%t</h2><h3>%s</h2><br><br><h4>勉強会: 広く浅く学ぶ情報リテラシー（仮）</h4><h4>%m</h4>
 
-#+OPTIONS: num:nil toc:1
+#+OPTIONS: num:nil toc:1 reveal_toc_footer:t
+#+MACRO: color @@html:<font color="$1">$2</font>@@
 
-* DevOpsを学ぶ理由
+* はじめに
 *** 頑張る木こり
-*** 資源評価への要求: ますます高く
-**** 資源評価プロジェクトの「成功」とは？
+:PROPERTIES:
+:reveal_background: fig/kikori.jpg
+:END:
+*** 失敗の轍をたどりつつある
+- 開発フェーズは流れに乗ってきた
+- {{{color(red,運用とプロジェクト構成)}}}に問題がある
+*** なぜか？
+我々が「運用」の内容を再定義をできていないから
+
+すぐお隣ではDevOpsが既に解決しているのに...
+*** DevOps？
+#+BEGIN_QUOTE
+DevOps is a cultural movement that changes how individuals think about their work
+...
+enabling people and teams to practice their crafts in effective and lasting ways.
+#+END_QUOTE
+(Davis & Daniels 2016, "Effective DevOps")
+*** 文化の伝播を阻むもの
+- 地理的要因
+我々の場合: {{{color(red,言語)}}}
+*** R言語
+資源研究Cにおけるシェア率No.1
+
+大半のユーザーの用途
+- 統計学的計算
+- +開発+
+
+*** 私たち研究者
+開発者とパラレルワールドに生きている
+*** どんな問題が起きるか？
+- そもそも問題に気づかない
+- それを学ぶ必要性がわからない
+- 勉強すべきものがたくさんあるように思える
+- ツールに固執する
+
+*** 結果として
+運用がいつまでも開発のレベルに追いつかない
+
+プロジェクト全体の生産性は低いまま
+
+*** この勉強会の目的
+文化伝播をたすけること
+* DevOpsを学ぶ理由
+*** 資源評価への要求，ますます高く
+**** 本プロジェクトの「成功」とは？
 ***** 合理的管理
 ***** ステークホルダーの相互理解
 *** なにが必要？
@@ -38,238 +84,163 @@
 
 損益分岐点はとっくに過ぎている
 *** どうするべきか？
-*** 解決のカギ: DevOps
-*** DevOpsって？
-ソフトウェア開発のベストプラクティス
-*** 大まかな流れ
-- 問題を定義する
-- 問題を解決する
-- 自動品質チェック
-- 自動で製品が組み上がる
+我々の仕事をあるべき姿に設計しなおす
+
+道標: DevOps
+*** 大まかに言うと
+*** ただし
+file:fig/polygraph.jpg
+*** 優れた翻訳
+file:fig/ccopy.jpg
 *** DevOpsを学ぶ理由
+#+ATTR_REVEAL: :frag (appear)
 - 我々はもう「開発」しているから
 - 横着ではなくレシピだから
-- 失敗の轍をなぞりつつあるから
 - よい副次的効果があるから
 ** 我々はもう「開発」している
+:PROPERTIES:
+:reveal_background: fig/large.jpg
+:reveal_background_size: 800px
+:END:
 *** あなたは「開発」していますか？
 *** あなたはプログラムを書きますか？
-*** 名前の定義
+*** 私たちがどこにいるのかを認識しましょう
 *** 私たちはプログラマより「開発」していることもある
 *** もう「開発」しているんです
+- 仕事の要件がソフトウェアと同じだから
+- 働き方が開発者と同じだから
+- プロジェクト構成がソフトウェアと同じだから
 *** 仕事の要件がソフトウェアと同じだから
-**** 解決すべき問題があるから
-**** データに対して何らかの処理をするから
-**** 処理には再現性が求められるから
-**** 再現性が求められるから
-*** ワーキングスタイルが開発者と同じだから
-**** コンピュータを使うから
-**** 複数人で作業するから
+#+ATTR_REVEAL: :frag (appear)
+- 解決すべき問題がある
+- データに対して何らかの処理をする
+- 処理には再現性が求められる
+- 製品公開後も迅速な改善を求められる
+*** 仕事のやり方が開発者と同じだから
+#+ATTR_REVEAL: :frag (appear)
+- コンピュータを使う
+- 複数人で作業する
 *** プロジェクト構成要素がソフトウェアと同じだから
-**** 顧客: 水産庁，漁業者
-**** 製品: 資源評価
-***** データ: データ
-***** コード: 計算プログラム，作図プログラム，文章
-***** テスト: データの仕様，想定される計算結果，誤字脱字
-***** ドキュメント: 報告書，プレゼンテーションファイル
-**** Issue
-***** 顧客からの要求
-***** プログラムのバグ
-***** 誤字脱字
-*** だからベストプラクティス: DevOpsを学びなさい
+- 顧客
+- 製品
+- Issue
+*** 顧客？
+- 水産庁
+- 漁業者
+*** 製品？
+資源評価
+*** 一般的なソフトウェア製品の構成
+図を入れる
+- データ
+- コード
+- テスト
+- ドキュメント
+*** データ？
+**** 漁獲量
+**** 生物データ
+**** パラメータ
+**** 文章
+*** コード？
+**** 計算プログラム
+**** 作図プログラム
+**** 文書整形プログラム
+*** テスト？
+**** プログラムの動作
+**** 計算結果
+**** データの仕様
+**** 誤字脱字
+**** その他改善案すべて
+*** ドキュメント？
+**** 報告書
+**** プレゼンテーションファイル
+*** プロジェクト構成要素がソフトウェアと同じだから
+- +顧客+
+- +製品+
+- Issue
+*** Issue？
+- プログラムのバグ
+- 誤字脱字
+- 顧客からの要求
+- 取り組むべき課題
 
+*** 以上のように
+我々の仕事の本質: ソフトウェア開発者と同じ
+- 仕事の要件
+- 働き方
+- プロジェクト構成要素
 ** 横着ではなくレシピ
+:PROPERTIES:
+:reveal_background: fig/cook.jpg
+:END:
 *** 自動化と聞いて眉を顰める風潮を感じる
-*** 自動化はただの構成要素
-*** なぜそう言える？
-*** 正しいから
-横着: 不正な方法
+- いいから仕事してよ
+- 手を抜きたいだけでしょ
+- また効率コーリツ言ってる
+*** 誤解を解きたい
+自動化は（ただの）構成要素
 
-*** 無駄がないから
+（目標はもっと先にある）
 
-*** 過程を楽しむべき仕事ではないから
-仕事は旅行ではない
-*** 働き方を変えるから
-**** あなたは奴隷
-**** 仕事の遅い奴隷
-**** コンピュータの足を引っ張るな
-**** 使い倒せ
-** 失敗の轍をなぞりつつある
+我々にとって自動化は不可欠
 
-*** 開発と運用に差が生まれつつある
-**** 運用の割合が多すぎるから
-**** 開発者文化が入ってこないから
-R言語ユーザーは統計学者
-**** コンピュータへの翻訳はコツがいるから
-***** 直訳ではだめ
-***** カーボン紙の例
-**** 勉強の習慣がないから
-バージョン管理をしていないというのはどれぐらいヤバいのか
-*** ファイトスの円盤
-*** 引き継がれなかったら意味がない
-** よい副次的効果があるから
+*** なぜ自動化する必要がある？
+それが正しいから
+*** 「正しい」とは
+対義語: 正しくない -> 不正
+*** 不正の例
+マラソンのコースをショートカット
+#+ATTR_REVEAL: :frag (appear)
+- 正しい経路: 道路に沿った道
+- 不正な経路: スタートとゴールを結んだ線
+*** それに対して
+我々の仕事では
+#+ATTR_REVEAL: :frag (appear)
+- +正しい+ {{{color(red,不適切な)}}}経路: 道路に沿った道
+- +不正な+ {{{color(red,正しい)}}}経路: スタートとゴールを結んだ線
+
+*** なぜ？
+仕事は旅行とは違うから
+
+過程を楽しむべきものではない
+
+*** 自動化していない状態とは？
+コンピュータからみた我々
+
+*仕事の遅い奴隷*
+
+*** だから
+レシピ（= DevOps）に従って，
+
+コンピュータとうまく役割分担しましょう
+** よい副次的効果
 *** プロジェクトの透明性
 着任初日から働き始められる
 *** 学習文化
-正のサイクル
-*** ゆとり
-
-* DevOps
-
+- 教え合い
+- 成長速度の加速
+*** 引き継がれなかったら意味がない
+file:fig/phaitos.jpg
+*** 時間と心のゆとり
+** まとめ
+DevOpsを学ぶ必要性を感じましたか？
+* なんとなくDevOpsを知る
 ** 構成要素
-*** バージョン管理システム
-
-*** チケット管理システム
-
-*** 自動テスト
-
-*** 自動ビルド
-
-*** コミュニケーションツール
-
-**** チャット
-**** bot
-
-** クッキーに例えると
-*** 手で成形
-
-*** 裏で手で成形
-
-*** カスタマーセンターに登録
-
-
-** 我々の仕事はどう変わるか
-
-*** 特定の問題について，チャットツールで議論
-
-*** 要求が決定したらIssue登録
-
-*** 責任者を決定
-
-*** ブランチを切る
-
-*** テストを書く
-
-*** コード編集 or 執筆
-
-*** ローカルビルド
-
-*** コミット，push，PR
-
-*** レビュー
-
-*** 修正
-
-*** 再ビルド
-
-*** 再レビュー
-
-*** マージ
-
-*** リモートビルド
-
-*** デリバリー
-
-*** デプロイ
+- バージョン管理システム
+- チケット管理システム
+- 自動テスト
+- 自動ビルド
+- コミュニケーションツール
+  - チャット
+  - bot
+** ...イメージ，湧きますか？
+Any questions?
+- 身近なもので例えると？
+- 我々の仕事はどう変わる？（[[https://github.com/akikirinrin/gomasaba/issues][資源評価の場合]]）
 
 * 議論
-
 * 勉強会のアウトライン確定
-
-** アウトライン
-*** DevOpsとは
-*** CUI に親しむ
-
-マウスを使わずにコンピュータを操作する利点を理解し，実際にやってみましょう
-
--   CUI と GUI
--   プレーンテキストとバイナリファイル
--   UNIX コマンド
--   ファイルの本質と拡張子
-
-*** プレーンテキストのちから
-
-業務環境の基礎をプレーンテキストに置くことで，強力なコマンドの恩恵を受けられるようになります
-
--   diff
--   grep
--   コラム: エンコードと改行コード
--   正規表現
--   コラム: DRY 原則
-
-*** コンテナ技術
-
-環境を正準化するメリットを学び，実際にDockerを使ってみましょう
-
--   Docker のインストール
--   コンテナ内での作業
-
-*** 文書: 人間のためのテキスト
-
-プレーンテキスト向けの執筆ツールに触れ，その利点と欠点について意見を交換しましょう
-
--   エディタ
--   アウトライナー
--   pandoc
--   LaTeX
-
-*** コード: コンピュータと人間のためのテキスト
-
-プログラミングが業務に占める割合が増えると，どのような問題が生じ得るかについて議論しましょう．
-続いて，それらの問題を解決するためのプログラミングの基礎的な方法論を学びましょう．
-プログラミング言語には，R言語を使用します．
-
-- スタイル
-    - 命名
-    - コメントは必要か
-    - インデント
-    - リンター
-- データ構造
-- ディレクトリ構造
-- データと2次データ
-- 関数化と高階関数
-- コラム: YAGNI
-- R言語の問題点
-
-*** 開発
-
-ソフトウェア開発の現場で用いられている手法について概観し，我々が学ぶべき本質について議論しましょう．
-
-- テスト駆動開発
-- バージョン管理
-- チケット管理システム
-- 継続的インテグレーション
-- コンテナ
-- 継続的デプロイ
-- アジャイル開発とカスケード開発
-
-*** 業務と研究への応用
-
-我々が業務や研究の現場で課題解決に取り組むとき，満たしているべき要件は何でしょうか．
-それらを具体的に解決する方法はあるでしょうか．
-
-
-**** 業務
-
--   Issueベースの課題解決
--   責任を負うのは誰か
-
-
-***** コミュニケーション
-
-円滑なコミュニケーションはプロジェクト成功の要です．
-飛び交うコミュニケーションを構成している要素について考え，適切なツールについて議論しましょう．
-
--   メールの問題点
--   開発者現場で使われるツールとその本質
-
-**** 研究
-
-- バージョン管理
-- データベースのブラッシュアップ
-- プログラム化とパッケージ化
-- DRY原則に基づく文書作成
-
+- [[https://akikirinrin.github.io/shell2cd/outline.html][GitHub]]
+- [[file:../outline.org][file]]
 * インフラ決定
 - Slack
 - Microsoft Teams
