--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+TITLE: 勉強会「広く浅く学ぶ情報リテラシー: シェルから継続的デリバリーまで」
-GitHub Pages: https://akikirinrin.github.io/shell2cd/
+GitHub Pages: https://akikirinrin.github.io/workshop_devops/
 ** 目的
 
 *** 大目的
