--- a/02/presentation.org
+++ b/02/presentation.org
@@ -15,7 +15,10 @@
 Rパッケージをベースに，
 
 DevOpsで論文を書きます
-*** ゴールは?
+** やらないこと
+- 関数のブラッシュアップ
+- 深い考察
+** 勉強会のゴール
 - ビルドの概念を理解する
 - 高次元の問題をIssueとして扱う感覚をつかむ
 
@@ -23,9 +26,28 @@ _*開発フローと研究フローの類似性を理解すること*_
 *** メリット
 - スピード
 - 再現性
-** やらないこと
-- 関数のブラッシュアップ
-- 深い考察
+*** 今日の会議がどう変わるか
+**** before
+- βの値を刻んだ場合（0.80, 0.85, ..., 1.05）
+- 2030年にMSY水準の親魚量の達成確率が50%となる場合
+- 小型魚のFを削減した場合
+- 規制を徐々に強める場合
+- 最初は厳しくし，一定期間後，制限を緩和する場合
+**** after
+- 要件定義
+- Issue登録 or プロジェクト化
+- タスク割当
+- ブランチ作成
+*** 解決すべき問題は多い
+- バージョン管理ってどうやるの？
+- よい関数を作るには？
+- どこまでプレーンテキストでやるべき？
+*「文化」がないと無理！*
+
+ところで，研究者としての成長は...？
+*** DevOpsに対する我々の現在地を把握してみましょう
+*** ということで
+まずは手を動かしながら，小さく始めましょう！
 * プロトタイプ作成
 ** チーム分け
 2チームに別れます
