:up: Update presentation

--- a/02/presentation.org
+++ b/02/presentation.org
@@ -45,7 +45,7 @@ _*開発フローと研究フローの類似性を理解すること*_
 *「文化」がないと無理！*
 
 ところで，研究者としての成長は...？
-*** DevOpsに対する我々の現在地を把握してみましょう
+*** 我々の現在地を把握してみましょう
 *** ということで
 まずは手を動かしながら，小さく始めましょう！
 * プロトタイプ作成
