--- a/README.org
+++ b/README.org
@@ -1,31 +1,56 @@
 #+TITLE: fraDevOps
-* 勉強会「DevOpsで論文を書こう！」
-* 勉強会「広く浅く学ぶ情報リテラシー: シェルから継続的デリバリーまで」
 GitHub Pages: https://akikirinrin.github.io/fra_devops/
-** 目的
+水産研究・教育機構にDevOpsを定着させるプロジェクト
 
-*** 大目的
-- 業務環境の効率化
-- 研究活動の活性化
+資料中で特に重要なものは新人研修における活用を想定
+* 運用ルール
+暗黙知を形式知化するためには，本リポジトリはコミュニティによって運用されることが望ましい．
 
-*** 本勉強会の目的
-コンピュータを適切に使用するために必要な情報を広く浅く提供し，
-参加者のさらなる学びのための足がかりとすること
+機構職員であれば誰でも自由に編集可とする．
+ただし，プルリクエストはマージ前に少なくとも2人のレビューを受けること．
 
-** 発案の動機
-- 業務フローについての漠然とした不満が聞こえてくる中，具体的な解決策について議論する場がないから
-- 資源評価の手法高度化や対象魚種拡大等の要求により，将来的に業務負担の増加が想定されるから
-- 膨大なデータ資産が未活用のまま眠っているから
+ただしバイナリファイルのコミットは禁止とする．
 
-** 実施内容
-- 「継続的デリバリー」の概念紹介
-- 重要な技術的要素の紹介と演習
-- 問題を収集し，その本質を見極めるための討論
-
-** 提示する考え方
-- 我々の業務および研究活動の本質は，ソフトウェア開発と同一である
-- 我々が抱える問題は，既にソフトウェア開発の現場では解決されつつある
-- 我々の業務および研究環境は，ソフトウェア開発手法を手本とすることで改善可能である
- 
-** アウトライン
-file:outline.org
+* DevOpsとは
+* バージョン管理
+** バージョン管理って何だろう
+仕事がどう変わる？
+** バージョン管理を始めるには
+** GitHubの基本的な使い方
+** コミットをまとめる
+* CUI
+** UNIXに触れてみよう
+** ファイルってなんだろう
+拡張子
+* プレーンテキスト
+** プレーンテキストとバイナリファイル
+** エディタ
+** 正規表現
+** アウトライナー
+** pandoc
+** LaTeX
+* プログラミング
+** スタイル
+** 関数プログラミング徹底演習
+良い関数化と悪い関数化
+** 文芸的プログラミング
+* 開発
+** テスト駆動開発
+** リファクタリング
+** 環境正準化
+** 継続的XX
+** アジャイル開発とカスケード開発
+* コミュニケーション
+** 開発者向けチャットツール
+* 抽象的話題
+** 業務の場におけるプログラミング
+*** 高次の視点から見たR言語の問題点
+** 業務とGitHubワークフロー
+** 業務設計
+** ソフトウェアが提供しようとする価値は何か
+* 情報処理
+** プロジェクト管理
+** GTD
+* Small Hacks
+** スニペット
+** 入力方式
